# MIRACL

./: Appy.5446048 t  Extract 2000 years losses  Makefile  README-makefile.txt  README.md  Tor.BI  amd64.txt  config.c  first.txt  mac.txt  manual.doc  meson.build  meson_options.txt  mex.c  problems.txt  readme.txt  texasdsp.txt  update.txt
docs/: README.md
docs/miracl-explained/: README.md  benchmarks.md  elliptic-curves.md  ieee-1363.md  licensing.md  miracl-standard-curves.md  security-advisory.md  timings.doc
docs/miracl-explained/reference-manual/: advanced-arithmetic-routines.md  elliptic-curve-routines.md  encryption-routines.md  floating-slash-routines.md  low-level-routines.md  montgomery-arithmetic-routines.md  structure-reference.md  zzn2-arithmetic-routines.md
docs/miracl-user-manual/: README.md  bibliography.md  docs.md  example-progs.md  floating-slash-nums.md  hardware-compiler-interface.md  implementation.md  installation.md  instance-variables.md  internal-rep.md  miracl-error-messages.md  the-cpp-interface.md  the-ui.md
exe/: private.key  public.key
free/: read.txt
https/github.com/decentralizedbloodbank/: ESP_12_16.git  TeslaSDK.git
include/: big.h  ec2.h  ecn.h  gf2m.h  meson.build  miracl.h  miracl.h.bak  miracl_wrapper.h  mirdef.comba10  mirdef.comba3  mirdef.comba4  mirdef.comba8  mirdef.default  mirdef.defaultMT  mirdef.gen  mirdef.mgw  zzn.h
lib/: bc32doit.bat  bcldoit.bat  bcxdoit.bat  gcdoit.bat  linux  linux64  linux64_cpp  mingw.bat  miracl.mak  ms32doit.bat  ms64doit.bat  ms64doit_cpp.bat  msiodoit.bat  msldoit.bat
source/: big.cpp  bmark.c  brent.c  brent_mt.c  deciph.c  decode.c  dssetup.c  dssign.c  dssver.c  ec2.cpp  ecn.cpp  ecn2_opt.c  ecsver.c  ecsver2.c  ecsver2s.c  ecsver_s.c  enciph.c  encode.c  factor.c  floating.cpp  gcc386.mcs  gccarm64.mcs  gf2m.cpp  hail.c  identity.c  index.c  kangaroo.c  lenstra.c  limlee.c  limlee.cpp  mersenne.c  meson.build  mr87f.c  mr87v.c  mraes.c  mralloc.c  mrarth0.c  mrarth1.c  mrarth2.c  mrarth3.c  (+54 more)
source/curve/: poly.cpp  poly.h  schoof.txt  sea.cpp
source/curve/pairing/: ake12bnx.cpp  bandw.cpp  benchmark.cpp  benchmarkthread.cpp  bestpair.cpp  bls12.cpp  bls24.cpp  bls_pair.cpp  bn.cpp  bn_pair.cpp  cp_pair.cpp  cpabe.cpp  daa.cpp  ecn2.cpp  ecn2.h  ecn3.cpp  ecn3.h  ecn4.cpp  ecn4.h  ecn6.cpp  ecn6.h  ecn8.cpp  ecn8.h  gf2m4x.cpp  gf2m4x.h  kss_pair.cpp  mnt_pair.cpp  pairing_1.h  pairing_3.h  pairings.txt  ss2_pair.cpp  ssp_pair.cpp  zzn12.cpp  zzn12.h  zzn12a.cpp  zzn12a.h  zzn12b.cpp  zzn12b.h  zzn18.cpp  zzn18.h  (+16 more)
source/mac/: big.cpp  big.h  zzn.cpp  zzn.h
source/p1363/: ecdh.c  ecdh.h  octet.c  octet.h  p1363.c  p1363.h  rsa.c  test1363.c  testecc.c
